--- a/README.Rmd
+++ b/README.Rmd
@@ -19,7 +19,7 @@ library(ggsci)
 library(ggplot2)
 library(ggrepel)
 library(reshape2)
-library(gridExtra)
+library(gridExtra) # grid.arrange, arangeGrob
 library(uwot)
 library(ComplexHeatmap)
 library(circlize)
@@ -76,98 +76,6 @@ datatable(meta_data)
 ![meta_data table](README_files/test_data-2.png)
 
 ```{r pca_source, echo=FALSE}
-
-cluster_umap=function(data, meta, k) {
-  data_mat2=data[,-1]
-  ids=data[,1]
-  data_mat2=data.matrix(data_mat2)
-
-  mnist_umap <- umap(data_mat2, pca = 15, fast_sgd = TRUE)
-  colnames(mnist_umap)=c("UMAP_1", "UMAP_2")
-  
-  kmeaner=kmeans(data_mat2, k)
-  kk=paste0("C", kmeaner$cluster)
-  
-  kmeans=as.character(kk)
-  
-  #actual UMAP
-  plotter=data.frame(UMAP_1=mnist_umap[,1], UMAP_2=mnist_umap[,2], SampleID=ids)
-  plotter$Kmeans=as.character(kmeans)
-  
-  plotter$Group=as.character(plotter$SampleID)
-  samps=as.character(unique(plotter$SampleID))
-  for(jj in 1:length(samps)){
-    grouper=subset(meta, ID==samps[jj])
-    grouper=as.character(grouper$Group[1])
-    
-    plotter$Group[plotter$SampleID==samps[jj]]<-grouper
-  }
-    
-  colors_samples2=colors_samples
-   
-  gg1=ggplot(plotter, aes(UMAP_1, UMAP_2, color=Group)) +
-    geom_point() + theme_bw() +
-    scale_color_manual(values=colors_samples2) +
-    theme(axis.text=element_text(color='black', size=14),
-          axis.title=element_text(color='black', size=16))
-    
-  
-  #kmeans umap
-  gg2=ggplot(sample(plotter), aes(UMAP_1, UMAP_2, color=Kmeans)) +
-      geom_point() + theme_bw() +
-      scale_color_manual(values=colors_clusters) +
-      theme(axis.text=element_text(color='black', size=14),
-            axis.title=element_text(color='black', size=16))
-  
-  #sample based pca
-    
-  totaler=data.frame(table(ids))
-  k_df = data.frame(table(kmeans, ids))
-  k_mat = dcast(k_df, ids ~ kmeans)
-  
-  k_mat=k_mat[,-1]
-  k_add=apply(k_mat, 2, function(x){(x/totaler$Freq)*100})
-  
-  pp=prcomp(k_add)
-  plotter=data.frame(PC1=pp$x[,1], PC2=pp$x[,2], SampleID=totaler$ids)
-      
-  plotter$Group=as.character(plotter$SampleID)
-  samps=as.character(unique(plotter$SampleID))
-  for(jj in 1:length(samps)){
-    grouper=subset(meta, ID==samps[jj])
-    grouper=as.character(grouper$Group[1])
-    
-    plotter$Group[plotter$SampleID==samps[jj]]<-grouper
-  }
-    
-  PoV <- pp$sdev^2/sum(pp$sdev^2)
-  
-  colors_samples2=colors_samples
-  
-  pp1=ggplot(plotter, aes(PC1, PC2, color=Group, label=SampleID)) +
-    geom_point(size=4) + theme_bw() +
-    geom_label_repel(size=6) +
-    scale_color_manual(values=colors_samples2) +
-    xlab(paste0("PC1 (Explained Variance ", round(PoV[1],4)*100, "%)")) +
-    ylab(paste0("PC2 (Explained Variance ", round(PoV[2],4)*100, "%)")) +
-    theme(axis.text=element_text(color='black', size=14),
-          axis.title=element_text(color='black', size=16))
-  
-  #loadings
-  
-  pp_load=pp$rotation
-  plotter2=data.frame(PC1=pp_load[,1], PC2=pp_load[,2], Label=rownames(pp_load))
-  pp2=ggplot(plotter2, aes(PC1, PC2, color=Label, label=Label)) +
-    theme_bw() +
-    geom_label_repel(size=6) +
-    scale_color_manual(values=colors_clusters) +
-    #xlab(paste0("PC1 (Explained Variance ", round(PoV[1],4)*100, "%)")) +
-    #ylab(paste0("PC2 (Explained Variance ", round(PoV[2],4)*100, "%)")) +
-    theme(axis.text=element_text(color='black', size=14),
-          axis.title=element_text(color='black', size=16))
-  
-  return(grid.arrange(gg1,gg2,pp1,pp2, nrow=2))
-}
 
 composition_plot=function(data, meta, k) {
   data_mat2=data[,-1]
@@ -264,13 +172,13 @@ heat_plot=function(data, meta, k) {
 
 ```
 
-```{r pca, fig.height = 10, fig.width = 12, fig.align = "center"}
+```{r pca, fig.height = 5, fig.width = 12, fig.align = "center"}
 
 # PCA cluster
 pp <- select(sample_data, -SampleID) %>%
   prcomp(scale=T)
   
-gg1 <- clusterJF(pp, ids = sample_data$SampleID, 
+pc1 <- clusterJF(pp, ids = sample_data$SampleID, 
             meta = meta_data$Group, 
             colors = colors_samples)
  
@@ -280,31 +188,45 @@ kmeans_groups <- select(sample_data, -SampleID) %>%
   kmeans(10) %$% cluster %>%
   {paste0('C', .)} # add a 'C' on the front of each group
   
-gg2 <- clusterJF(pp, ids = 1:nrow(sample_data),
+pc2 <- clusterJF(pp, ids = 1:nrow(sample_data),
                  meta = kmeans_groups,
                  colors = colors_clusters,
                  legend.name = 'Kmeans')
 
-# sample-based pca
-groups_table <- with(sample_data, table(SampleID, kmeans_groups))
+# add these in their own section below to avoid repeating the same thing over and over again
+# Figure out what purpose this serves...
+# # sample-based pca
+# groups_table <- with(sample_data, table(SampleID, kmeans_groups))
+# 
+# pp <- apply(groups_table, 2, function(x) x / rowSums(groups_table)) %>%
+#   prcomp()
+# 
+# gg3 <- sb_clusterJF(pp, ids = rownames(groups_table),
+#                     meta = meta_data$Group,
+#                     colors = colors_samples)
+# 
+# # loadings
+# gg4 <- sb_loadingsJF(pp, colors = colors_clusters)
 
-pp <- apply(groups_table, 2, function(x) x / rowSums(groups_table)) %>%
-  prcomp()
-
-gg3 <- sb_clusterJF(pp, ids = rownames(groups_table),
-                    meta = meta_data$Group,
-                    colors = colors_samples)
-
-# loadings
-gg4 <- sb_loadingsJF(pp, colors = colors_clusters)
-
-grid.arrange(gg1,gg2,gg3,gg4, nrow=2)
+grid.arrange(pc1, pc2, nrow=1)
 ```
 
-```{r umap, fig.height = 10, fig.width = 12, fig.align = "center"}
+```{r umap, fig.height = 5, fig.width = 12, fig.align = "center"}
 
-cluster_umap(sample_data, meta_data, 10)
+# Umap
+mnist_umap <- select(sample_data, -SampleID) %>%
+  umap(pca = 15, fast_sgd = TRUE)
 
+um1 <- clusterJF(mnist_umap, ids = sample_data$SampleID,
+                 meta = meta_data$Group,
+                 colors = colors_samples)
+
+um2 <- clusterJF(mnist_umap, ids = 1:nrow(sample_data),
+                 meta = kmeans_groups,
+                 colors = colors_clusters,
+                 legend.name = 'Kmeans')
+
+grid.arrange(um1, um2, nrow=1)
 ```
 
 ```{r comp_plot, fig.height = 6, fig.width = 8, fig.align = "center"}
