--- a/README.Rmd
+++ b/README.Rmd
@@ -14,8 +14,8 @@ knitr::opts_chunk$set(
 The goal of JoesFlow is to analyze high-dimensional single cell data from flow cytometry, scRNA-seq, CITE-seq and any kind of single cell matrix data. JoesFlow utilizes novel scRNA-seq dimension reduction techniques to generate interpretable and informative visualizations that incorporate all aspects of a dataset in an unbiased manner.
 
 ```{r libs, echo=FALSE, message=FALSE, results='hide'}
-library(RColorBrewer)
-library(ggsci)
+library(RColorBrewer) # brewer.pal
+library(ggsci) # pal_d3, pal_igv
 library(ggplot2)
 library(ggrepel)
 library(reshape2)
@@ -120,56 +120,6 @@ composition_plot=function(data, meta, k) {
   total_col=ncol(plotter)
   #datatable(data.frame(plotter[,(total_col-1):total_col], plotter[,1:(total_col-2)]))
 }
-
-heat_plot=function(data, meta, k) {
-  data_mat2=data[,-1]
-  ids=data[,1]
-  data_mat2=data.matrix(data_mat2)
-  
-  kmeaner=kmeans(data_mat2, k)
-  kk=paste0("C", kmeaner$cluster)
-  
-  kmeans=as.character(kk)
-  
-  plotter=data.frame(SampleID=ids)
-  plotter$Kmeans=as.character(kmeans)
-  
-  plotter$Group=as.character(plotter$SampleID)
-  samps=as.character(unique(plotter$SampleID))
-  for(jj in 1:length(samps)){
-    grouper=subset(meta, ID==samps[jj])
-    grouper=as.character(grouper$Group[1])
-    
-    plotter$Group[plotter$SampleID==samps[jj]]<-grouper
-  }
-  
-  samp_samp=sample(1:nrow(plotter), 500)
-  plotter_sub=plotter[samp_samp,]
-  data_mat2_sub=data_mat2[samp_samp,]
-  
-  colorer2=c()
-  for(j in 1:length(plotter_sub$Group)){
-    colorer2[j]=colors_samples[j]
-    names(colorer2)[j]=plotter_sub$Group[j]
-    }
-  ha=columnAnnotation(Group=plotter_sub$Group, col=list(Group=colorer2))
-  
-  Heatmap(scale(t(data_mat2_sub)), show_row_names = T, show_column_names = F,
-              top_annotation = ha,
-              heatmap_legend_param = list(title = "Scaled Value"),
-              cluster_rows = T, cluster_columns = T, row_names_side = 'left',
-              column_names_gp = gpar(fontsize=7),
-              row_names_gp = gpar(fontsize=10),
-              row_title_gp = gpar(fontsize = 10),
-              row_names_max_width = unit(10,'cm'),
-              use_raster = T,
-              column_split=plotter_sub$Kmeans,
-              cluster_column_slices=F,
-              #column_split = splitter,
-              #left_annotation = ha,
-              col = colorRamp2(c(-2, 0, 2), c("blue", "white", "red")))
-}
-
 ```
 
 ```{r pca, fig.height = 5, fig.width = 12, fig.align = "center"}
@@ -238,7 +188,10 @@ composition_plot(sample_data, meta_data, 15)
 ![data table](README_files/comp_plot-2.png)
 
 ```{r heat_plot, fig.height = 10, fig.width = 12, fig.align = "center"}
-
-heat_plot(sample_data, meta_data, 10)
-
+# marker heat plot
+select(sample_data, -SampleID) %>%
+  marker_heatJF(ids = sample_data$SampleID,
+                meta = meta_data$Group,
+                colors = colors_samples,
+                sample_size = 500)
 ```
