--- a/README.Rmd
+++ b/README.Rmd
@@ -75,6 +75,13 @@ datatable(meta_data)
 
 ![meta_data table](README_files/test_data-2.png)
 
+Convert `meta_data` to named vector as expected by JoesFlow. This is taken care of automatically when loading meta data through the shiny app, assuming the first column contains IDs, and the second column contains Group designations.
+
+```{r meta_data format}
+meta <- meta_data[,2]
+names(meta) <- meta_data[,1]
+```
+
 ```{r pca_source, echo=FALSE}
 
 composition_plot=function(data, meta, k) {
@@ -122,6 +129,8 @@ composition_plot=function(data, meta, k) {
 }
 ```
 
+### PCA figures
+
 ```{r pca, fig.height = 5, fig.width = 12, fig.align = "center"}
 
 # PCA cluster
@@ -137,29 +146,17 @@ set.seed(23948)
 kmeans_groups <- select(sample_data, -SampleID) %>%
   kmeans(10) %$% cluster %>%
   {paste0('C', .)} # add a 'C' on the front of each group
+names(kmeans_groups) <- sample_data$SampleID
   
 pc2 <- clusterJF(pp, ids = 1:nrow(sample_data),
                  meta = kmeans_groups,
                  colors = colors_clusters,
                  legend.name = 'Kmeans')
 
-# add these in their own section below to avoid repeating the same thing over and over again
-# Figure out what purpose this serves...
-# # sample-based pca
-# groups_table <- with(sample_data, table(SampleID, kmeans_groups))
-# 
-# pp <- apply(groups_table, 2, function(x) x / rowSums(groups_table)) %>%
-#   prcomp()
-# 
-# gg3 <- sb_clusterJF(pp, ids = rownames(groups_table),
-#                     meta = meta_data$Group,
-#                     colors = colors_samples)
-# 
-# # loadings
-# gg4 <- sb_loadingsJF(pp, colors = colors_clusters)
-
 grid.arrange(pc1, pc2, nrow=1)
 ```
+
+### UMAP figures
 
 ```{r umap, fig.height = 5, fig.width = 12, fig.align = "center"}
 
@@ -179,19 +176,40 @@ um2 <- clusterJF(mnist_umap, ids = 1:nrow(sample_data),
 grid.arrange(um1, um2, nrow=1)
 ```
 
+### Sample-based PCA
+
+```{r sample based pca, fig.height=5, fig.width=12, fig.align="center"}
+# Figure out what purpose this serves...
+# sample-based pca
+groups_table <- with(sample_data, table(SampleID, kmeans_groups))
+
+pp <- apply(groups_table, 2, function(x) x / rowSums(groups_table)) %>%
+  prcomp()
+
+gg3 <- sb_clusterJF(pp, ids = rownames(groups_table),
+                    meta = meta_data$Group,
+                    colors1 = colors_samples,
+                    colors2 = colors_clusters)
+
+gg3
+```
+
+### Composition plot
+
 ```{r comp_plot, fig.height = 6, fig.width = 8, fig.align = "center"}
-
-composition_plot(sample_data, meta_data, 15)
-
+compositionJF(meta, kmeans_groups, colors_clusters)$g1
 ```
 
 ![data table](README_files/comp_plot-2.png)
+
+### Heat plot
 
 ```{r heat_plot, fig.height = 10, fig.width = 12, fig.align = "center"}
 # marker heat plot
 select(sample_data, -SampleID) %>%
   marker_heatJF(ids = sample_data$SampleID,
                 meta = meta_data$Group,
+                kmeans_groups = kmeans_groups,
                 colors = colors_samples,
                 sample_size = 500)
 ```
