--- a/index.qmd
+++ b/index.qmd
@@ -13,23 +13,24 @@ editor: visual
 
 The recommended method for running JoesFlow is using Docker, because the images provided have all system dependencies and R packages.
 
-* [Install Docker on your system.](https://docs.docker.com/get-docker/) This will require admin-level access. Using the WSL 2 backend is recommended for Windows computers.
-* Open Docker on your computer.
-* Mac OS
-  * Open Terminal.app
-* Windows
-  * Open the Windows PowerShell
-* Start JoesFlow with the following command: `docker run --user shiny --rm -ti -p 3838:3838 johnsonra/joes-flow`
-  * The first time you run this will take several minutes, as it will have to download the image to your computer. The next time you start it up should only take a few seconds.
-  * Update your local image (e.g. to update to a new version) with the following command: `docker pull johnsonra/joes-flow`
-* Once JoesFlow is running, open this page in your favorite browser: http://localhost:3838/JoesFlow
-* To shut down the Docker image when finished, you can enter the command `control-c` in the Terminal/PowerShell window and close it.
+-   [Install Docker on your system.](https://docs.docker.com/get-docker/) This will require admin-level access. Using the WSL 2 backend is recommended for Windows computers.
+-   Open Docker on your computer.
+-   Mac OS
+    -   Open Terminal.app
+-   Windows
+    -   Open the Windows PowerShell
+-   Start JoesFlow with the following command: `docker run --user shiny --rm -ti -p 3838:3838 idssniaid/joes-flow`
+    -   The first time you run this will take several minutes, as it will have to download the image to your computer. The next time you start it up should only take a few seconds.
+    -   Update your local image (e.g. to update to a new version) with the following command: `docker pull idssniaid/joes-flow`
+    -   These instructions assume you are running the [production version of JoesFlow](https://hub.docker.com/repository/docker/idssniaid/joes-flow). To run a [development version](https://hub.docker.com/repository/docker/johnsonra/joes-flow), which may grant early access to features as well as possible unresolved bugs, use the image tag, `johnsonra/joes-flow`.
+-   Once JoesFlow is running, open this page in your favorite browser: <http://localhost:3838/JoesFlow>
+-   To shut down the Docker image when finished, you can enter the command `control-c` in the Terminal/PowerShell window and close it.
 
 ## Installation via R
 
 JoesFlow has a lot of dependencies, so in order to install locally in RStudio, you may need to install additional system tools and R packages for full functionality.
 
-``` {r install, eval=FALSE}
+```{r install, eval=FALSE}
 # install directly from GitHub
 remotes::install_github("NIAID/JoesFlow")
 ```
@@ -68,9 +69,16 @@ root <- system('git rev-parse --show-toplevel', intern = TRUE)
 set.seed(238479)
 ```
 
+## Help
+
+The following channels are available to get help with JoesFlow:
+
+* Sign up for the [JoesFlow mailing list](https://list.nih.gov) (search for "JoesFlow")
+* [Submit an issue on GitHub](https://github.com/niaid/JoesFlow/issues)
+
 ## Data format
 
-:::{.callout-important}
+::: callout-important
 Need documentation of expected data format
 :::
 
@@ -78,14 +86,15 @@ Need documentation of expected data format
 
 ```{r test_data}
 #| echo: false
-sample_data <- paste0(root, '/tests/flow_test.csv') %>%
-  read.csv(sep=',', header=T)
+sample_data <- read.csv('https://raw.githubusercontent.com/niaid/JoesFlow/main/tests/flow_test.csv',
+                        sep=',', header=T)
 
-meta_data <- paste0(root, '/tests/metadata.csv') %>%
-  read.csv(header=T, sep=',')
+meta_data <- read.csv('https://raw.githubusercontent.com/niaid/JoesFlow/main/tests/metadata.csv',
+                      header=T, sep=',')
 ```
 
 Sample [flow file](https://github.com/NIAID/JoesFlow/blob/main/tests/flow_test.csv).
+
 ```{r test_data output1}
 #| echo: false
 #| eval: false
@@ -93,11 +102,13 @@ Sample [flow file](https://github.com/NIAID/JoesFlow/blob/main/tests/flow_test.c
 # code used to generate the following image
 datatable(sample_data[1:100,1:20])
 ```
+
 ![](img/test_data-1.png)
 
 ### Metadata file
 
 Sample [metadata file](https://github.com/NIAID/JoesFlow/blob/main/tests/metadata.csv).
+
 ```{r test_data output2}
 #| echo: false
 #| eval: false
@@ -105,8 +116,8 @@ Sample [metadata file](https://github.com/NIAID/JoesFlow/blob/main/tests/metadat
 # code used to generate the following image
 datatable(meta_data)
 ```
-![](img/test_data-2.png)
 
+![](img/test_data-2.png)
 
 ```{r meta_data format}
 #| echo: false
@@ -116,13 +127,11 @@ meta <- meta_data[,2]
 names(meta) <- meta_data[,1]
 ```
 
-
 ## JoesFlow output
 
-:::{.callout-important}
+::: callout-important
 Need documentation of JoesFlow output. A few figures are shown here, but there are additional outputs that need to be included, along with descriptions for each.
 :::
-
 
 ### PCA figures
 
